sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:11: error: not found: value -
      case (true,taille-1) => return
                       ^AlgGnomeSort:13: error: type mismatch;
 found   : Int(0)
 required: Integer
      case (false,0) => echange(positionGnome,positionGnome+1); positionGnome = positionGnome + 1;
                  ^